--- a/style.css
+++ b/style.css
@@ -115,19 +115,49 @@ video {
 	width: 98%;
 	background: #444;
 	text-align: center;
+	z-index: -1;
 }
 .videodiv {
 	float: left;	
 	width: 50%;
 }
+.contentdiv {
+	width: 100%;
+}
+
 #localVideo {
 	float: right;
-	border-radius: 5px 0px 5px 5px;
+	border-radius: 0px 0px 5px 5px;
 }
 #remoteVideo {
 	float: left;
-	border-radius: 5px 0px 5px 5px;
+	border-radius: 0px 0px 5px 5px;
 }
+#contentVideo{
+	float: left;
+	border-radius: 0px 0px 5px 5px;
+	width: 100%;
+	z-index: 1;
+	display: none;
+}
+#noshare{
+	margin: auto;
+	display: flex;
+	vertical-align: middle;
+	min-height: 100px;
+	background-color: #444;
+	text-align: center;
+	z-index: -1;
+	border-radius: 0px 0px 5px 5px;
+}
+
+.offair{
+	margin: auto;
+	border-radius: 5px;
+}
+
+
+
 .vidtitle {
 	text-align: left;
 	font-family: ProximaNova_Bold;
@@ -139,6 +169,7 @@ video {
 	color: white;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
+	z-index: 10;
 }
 .locvidtitle {
 	margin-left: 2%;
@@ -159,6 +190,16 @@ video {
 #localMediaControls {
 	float: right;
 }
+
+#audioIn {
+	width: 98%;
+}
+
+#contentShare {
+	float: right;
+	padding-top: 30px;
+}
+
 legend {
 	background-color: #1478C7; /* #204E74; */
 	color: white;
@@ -169,6 +210,7 @@ legend {
 	text-transform: uppercase;
 	padding: 0 20px;
 	margin-top: -60px;
+	z-index: 10;
 }
 table.widget-crl {
 	width: 100%;
