--- a/style.css
+++ b/style.css
@@ -121,18 +121,52 @@ video {
 	float: left;	
 	width: 50%;
 }
+
+.remotevid {
+	width: 50%;
+}
+.localvid {
+	width: 30%;
+}
+.roster{
+	width: 20%;
+}
+.rostern {
+	width: 80%;
+	display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;	
+}
+.rosterv {
+	width: 15%;
+}
+.rostera {
+	width: 15%;
+}
+
 .contentdiv {
 	width: 100%;
 }
 
 #localVideo {
-	float: right;
+	float: left;
 	border-radius: 0px 0px 5px 5px;
 }
 #remoteVideo {
 	float: left;
+	display: none;
 	border-radius: 0px 0px 5px 5px;
 }
+#plist{
+	float: left;
+	width: 100%;
+	padding: 5px;
+	background-color: #dde4ee;
+	min-height: 90px;
+	border-radius: 0 0 5px 5px;
+}
+
 #contentVideo{
 	float: left;
 	border-radius: 0px 0px 5px 5px;
@@ -140,6 +174,7 @@ video {
 	z-index: 1;
 	display: none;
 }
+
 #noshare{
 	margin: auto;
 	display: flex;
@@ -174,6 +209,54 @@ video {
 .locvidtitle {
 	margin-left: 2%;
 }
+
+#wait4agent {
+	float: left;
+	width: 90%;
+	padding-top: 12%;
+	padding-bottom: 12%;
+	position: relative;
+	min-height: 192px;
+	margin: auto;
+	background-color: #dde4ee;
+	border-radius: 0 0 5px 5px;
+	z-index: -1;
+}
+
+@keyframes rotating {
+	0% {
+		transform: rotate(0deg);
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
+	   }
+	100% {
+		transform: rotate(360deg);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
+	   }
+}
+
+
+#wait4agent img{
+	width: 20%;
+	margin-left: auto;
+	margin-right: auto;
+	display: none;
+	animation-name: rotating;
+	animation-duration: 2s;
+	animation-timing-function: cubic-bezier(.64,0,.26,.98);
+	animation-iteration-count: infinite;
+}
+
+#wait4agent p{
+	font-size: 1.2em;
+	color: black;
+	text-align: center;
+	display: none;
+}
+
 .userMedia {
 	width: 49%;
 	float: left;
